--- a/frontend/src/styles/pagesStyles/SchoolOutreachPage.css
+++ b/frontend/src/styles/pagesStyles/SchoolOutreachPage.css
@@ -1,28 +1,36 @@
-.Carousel
-{
-   display: flexbox;
-   background-color: blanchedalmond;
-   height: 27rem;
-}
-.OutMain_1
-{
-    margin-top: 3rem;
+.outreach-content {
     display: flex;
-    flex-direction: column;
-    
-}
-.outReach_1
-{
-    display: flex;
+    align-items: center;
     justify-content: center;
+    gap: 100px;
+    padding-top: 3%;
 }
-.OutHeading1
-{
-  color: #262261;
-  /* display: flex; */
+
+.outreach-content > img {
+    width: 450px;
+    border-radius: 10px;
 }
-.outReachInfo_1
-{
-    margin: 2rem;
-    padding: 1rem;
+
+.outreach-content > p {
+    width: 40%;
+    text-align: justify;
+    font-family: "Montserrat", sans-serif;
+    line-height: 1.8;
+}
+
+@media screen and (max-width: 500px) {
+    .outreach-content {
+       flex-direction: column;
+       gap: 30px;
+       padding-top: 8%;
+       padding-bottom: 8%;
+    }
+
+    .outreach-content > img {
+        width: 80%;
+    }
+    
+    .outreach-content > p {
+        width: 80%;
+    }
 }
